--- a/client/src/output.css
+++ b/client/src/output.css
@@ -656,16 +656,12 @@ body {
   inset: 0px;
 }
 
+.-bottom-0 {
+  bottom: -0px;
+}
+
 .-bottom-10 {
   bottom: -2.5rem;
-}
-
-.-bottom-\[60px\] {
-  bottom: -60px;
-}
-
-.-bottom-\[64px\] {
-  bottom: -64px;
 }
 
 .left-2 {
@@ -712,10 +708,6 @@ body {
   top: 50%;
 }
 
-.-bottom-0 {
-  bottom: -0px;
-}
-
 .z-10 {
   z-index: 10;
 }
@@ -746,6 +738,10 @@ body {
 .my-3 {
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
+}
+
+.mb-16 {
+  margin-bottom: 4rem;
 }
 
 .mb-2 {
@@ -794,10 +790,6 @@ body {
 
 .mt-4 {
   margin-top: 1rem;
-}
-
-.mt-5 {
-  margin-top: 1.25rem;
 }
 
 .mt-6 {
@@ -892,32 +884,20 @@ body {
   height: 100vh;
 }
 
-.max-h-\[var\(--radix-dropdown-menu-content-available-height\)\] {
-  max-height: var(--radix-dropdown-menu-content-available-height);
-}
-
-.max-h-60 {
-  max-height: 15rem;
-}
-
-.max-h-\[60\] {
-  max-height: 60;
-}
-
-.max-h-\[20rem\] {
-  max-height: 20rem;
-}
-
-.max-h-\[30rem\] {
-  max-height: 30rem;
-}
-
-.max-h-\[40rem\] {
-  max-height: 40rem;
+.max-h-\[2rem\] {
+  max-height: 2rem;
 }
 
 .max-h-\[34rem\] {
   max-height: 34rem;
+}
+
+.max-h-\[var\(--radix-dropdown-menu-content-available-height\)\] {
+  max-height: var(--radix-dropdown-menu-content-available-height);
+}
+
+.max-h-\[25rem\] {
+  max-height: 25rem;
 }
 
 .min-h-\[60px\] {
@@ -952,16 +932,12 @@ body {
   width: 5rem;
 }
 
+.w-24 {
+  width: 6rem;
+}
+
 .w-3\.5 {
   width: 0.875rem;
-}
-
-.w-3\/4 {
-  width: 75%;
-}
-
-.w-32 {
-  width: 8rem;
 }
 
 .w-4 {
@@ -980,6 +956,10 @@ body {
   width: 1px;
 }
 
+.w-\[80\%\] {
+  width: 80%;
+}
+
 .w-\[90\%\] {
   width: 90%;
 }
@@ -988,20 +968,24 @@ body {
   width: 100%;
 }
 
-.w-auto {
-  width: auto;
-}
-
 .min-w-12 {
   min-width: 3rem;
+}
+
+.min-w-\[20rem\] {
+  min-width: 20rem;
 }
 
 .min-w-\[8rem\] {
   min-width: 8rem;
 }
 
-.min-w-\[20rem\] {
-  min-width: 20rem;
+.max-w-\[30rem\] {
+  max-width: 30rem;
+}
+
+.max-w-\[60\%\] {
+  max-width: 60%;
 }
 
 .max-w-lg {
@@ -1010,6 +994,10 @@ body {
 
 .flex-1 {
   flex: 1 1 0%;
+}
+
+.grow {
+  flex-grow: 1;
 }
 
 .-translate-x-2\/4 {
@@ -1058,6 +1046,12 @@ body {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.scale-150 {
+  --tw-scale-x: 1.5;
+  --tw-scale-y: 1.5;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .cursor-default {
   cursor: default;
 }
@@ -1078,6 +1072,10 @@ body {
 
 .resize-none {
   resize: none;
+}
+
+.flex-row {
+  flex-direction: row;
 }
 
 .flex-col {
@@ -1130,6 +1128,10 @@ body {
 
 .gap-4 {
   gap: 1rem;
+}
+
+.gap-5 {
+  gap: 1.25rem;
 }
 
 .gap-6 {
@@ -1222,6 +1224,10 @@ body {
   border-width: 1px;
 }
 
+.border-0 {
+  border-width: 0px;
+}
+
 .border-2 {
   border-width: 2px;
 }
@@ -1307,6 +1313,11 @@ body {
   border-top-color: transparent;
 }
 
+.\!bg-black {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1)) !important;
+}
+
 .bg-background {
   background-color: hsl(var(--background));
 }
@@ -1381,9 +1392,9 @@ body {
   background-color: transparent;
 }
 
-.bg-violet-800 {
+.bg-violet-700 {
   --tw-bg-opacity: 1;
-  background-color: rgb(91 33 182 / var(--tw-bg-opacity, 1));
+  background-color: rgb(109 40 217 / var(--tw-bg-opacity, 1));
 }
 
 .bg-white {
@@ -1535,12 +1546,8 @@ body {
   padding-bottom: 0px;
 }
 
-.pb-16 {
-  padding-bottom: 4rem;
-}
-
-.pb-4 {
-  padding-bottom: 1rem;
+.pb-20 {
+  padding-bottom: 5rem;
 }
 
 .pl-2 {
@@ -1549,10 +1556,6 @@ body {
 
 .pl-8 {
   padding-left: 2rem;
-}
-
-.pr-10 {
-  padding-right: 2.5rem;
 }
 
 .pr-2 {
@@ -1569,6 +1572,15 @@ body {
 
 .text-center {
   text-align: center;
+}
+
+.text-start {
+  text-align: start;
+}
+
+.\!text-base {
+  font-size: 1rem !important;
+  line-height: 1.5rem !important;
 }
 
 .\!text-lg {
@@ -1599,6 +1611,11 @@ body {
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }
 
 .text-\[0\.8rem\] {
@@ -1632,6 +1649,10 @@ body {
 
 .font-bold {
   font-weight: 700;
+}
+
+.font-light {
+  font-weight: 300;
 }
 
 .font-medium {
@@ -1737,6 +1758,11 @@ body {
 
 .text-transparent {
   color: transparent;
+}
+
+.text-violet-600 {
+  --tw-text-opacity: 1;
+  color: rgb(124 58 237 / var(--tw-text-opacity, 1));
 }
 
 .text-white {
@@ -1938,6 +1964,11 @@ html {
   background-color: hsl(var(--secondary) / 0.8);
 }
 
+.hover\:bg-violet-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(124 58 237 / var(--tw-bg-opacity, 1));
+}
+
 .hover\:bg-white\/10:hover {
   background-color: rgb(255 255 255 / 0.1);
 }
@@ -2118,16 +2149,12 @@ html {
 }
 
 @media (min-width: 500px) {
-  .xs\:static {
-    position: static;
+  .xs\:mt-0 {
+    margin-top: 0px;
   }
 
-  .xs\:inline {
-    display: inline;
-  }
-
-  .xs\:pb-0 {
-    padding-bottom: 0px;
+  .xs\:flex-row {
+    flex-direction: row;
   }
 
   .xs\:text-base {
@@ -2141,16 +2168,8 @@ html {
     position: static;
   }
 
-  .sm\:block {
-    display: block;
-  }
-
   .sm\:inline {
     display: inline;
-  }
-
-  .sm\:hidden {
-    display: none;
   }
 
   .sm\:w-auto {
@@ -2179,6 +2198,14 @@ html {
     border-radius: var(--radius);
   }
 
+  .sm\:\!border {
+    border-width: 1px !important;
+  }
+
+  .sm\:border {
+    border-width: 1px;
+  }
+
   .sm\:\!px-2 {
     padding-left: 0.5rem !important;
     padding-right: 0.5rem !important;
@@ -2187,6 +2214,10 @@ html {
   .sm\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+
+  .sm\:pb-4 {
+    padding-bottom: 1rem;
   }
 
   .sm\:text-left {
@@ -2205,12 +2236,20 @@ html {
 }
 
 @media (min-width: 768px) {
+  .md\:mt-4 {
+    margin-top: 1rem;
+  }
+
   .md\:inline {
     display: inline;
   }
 
   .md\:w-2\/3 {
     width: 66.666667%;
+  }
+
+  .md\:w-32 {
+    width: 8rem;
   }
 
   .md\:min-w-\[32rem\] {
@@ -2222,14 +2261,39 @@ html {
     line-height: 1.5rem !important;
   }
 
+  .md\:\!text-lg {
+    font-size: 1.125rem !important;
+    line-height: 1.75rem !important;
+  }
+
+  .md\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .md\:text-7xl {
+    font-size: 4.5rem;
+    line-height: 1;
+  }
+
   .md\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
   }
 
+  .md\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
   .md\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
+  }
+
+  .md\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 }
 
@@ -2250,20 +2314,16 @@ html {
     width: 33.333333%;
   }
 
-  .lg\:w-1\/4 {
-    width: 25%;
-  }
-
   .lg\:w-full {
     width: 100%;
   }
 
-  .lg\:min-w-\[20rem\] {
-    min-width: 20rem;
+  .lg\:flex-none {
+    flex: none;
   }
 
-  .lg\:flex-col {
-    flex-direction: column;
+  .lg\:gap-0 {
+    gap: 0px;
   }
 
   .lg\:gap-10 {
@@ -2277,6 +2337,10 @@ html {
 }
 
 @media (min-width: 1280px) {
+  .xl\:w-2\/4 {
+    width: 50%;
+  }
+
   .xl\:min-w-\[26rem\] {
     min-width: 26rem;
   }
@@ -2285,12 +2349,25 @@ html {
     min-width: 36rem;
   }
 
-  .xl\:flex-col {
-    flex-direction: column;
+  .xl\:min-w-\[50rem\] {
+    min-width: 50rem;
+  }
+
+  .xl\:max-w-\[60\%\] {
+    max-width: 60%;
+  }
+
+  .xl\:items-start {
+    align-items: flex-start;
   }
 
   .xl\:justify-center {
     justify-content: center;
+  }
+
+  .xl\:px-20 {
+    padding-left: 5rem;
+    padding-right: 5rem;
   }
 }
 
