--- a/client/src/input.css
+++ b/client/src/input.css
@@ -71,8 +71,16 @@
     -ms-overflow-style: none;
     scrollbar-width: none;
   }
-
   
+}
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
 }
 
 html {
